# cdhist

./: .editorconfig  .flake8  .gitignore  Makefile  README.md  bashrc_cdhist  cdhist  cdhist-setup  cdhist.bashrc  cdhist.py  cdhist.rc  index.html  install.sh  justfile  pyproject.toml  setup.py
cdhist/: __main__.py  cdhist.py  git_worktree.py  main.py  utils.py  version.py
